<resources>
    <string name="app_name">SoKhop.vn</string>
    <string name="facebook_app_id">1529162307110661</string>
    <string name="server_client_id">798524888207-rc038gfiignlco51itdou0gj3t518njm.apps.googleusercontent.com</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="KieuDangNhapKhac">Hoặc Đăng Nhập Bằng</string>
    <string name="ban_chua_co">Bạn Chưa Có Tài Khoản SoKhop?</string>
    <string name="dangki"> Đăng Ký</string>
    <string name="start_title">Bạn Là ?</string>
    <string name="start_hayla">-------------------- Hay --------------------</string>
    <string name="ban_da_co">Bạn đã có tài khoản SoKhop.vn?</string>
    <string name="dangnhap"> Đăng Nhập</string>
    <string name="password">Mật Khẩu</string>
    <string name="retry_password">Nhập Lại Mật Khẩu</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Số Điện Thoại</string>
    <string name="birthDay">Ngày Sinh(yyyy-mm-dd)</string>
    <string name="birth_Day">Ngày Sinh</string>
    <string name="user">Họ Tên</string>
    <string name="company">Tên Tổ Chức</string>
    <string name="hotline">Hotline</string>
    <string name="add_avatar">Thêm mới ảnh đại diện</string>
    <string name="info_avatar">Vui lòng cập nhật thông tin cá nhân \n Để tăng cơ hội tìm được việc làm như ý,\n một cách nhanh hơn.</string>
    <string name="txtCoverImage">Thêm Mới Ảnh Bìa</string>
    <string name="welcome">Chào mừng bạn đến với \n sàn làm việc SoKhop.vn</string>
    <string name="ready">ĐÃ ĐẾN LÚC</string>
    <string name="info_finish">Khám phá cơ hội phát triển sự nghiệp \n và tìm được việc làm như ý,theo \n cách riêng của bạn!</string>
    <string name="mypagesTab">Trang Cá Nhân</string>
    <string name="mypagesTab_tochuc">Trang Tổ Chức</string>
    <string name="messageTab">Tin Nhắn</string>
    <string name="infoTab">Thông Báo</string>
    <string name="historyActivityTab">Lịch Sử Hoạt Động</string>
    <string name="historyDealTab">Lịch Sử Giao Dịch</string>
    <string name="title_setting">Cơ Bản</string>
    <string name="setting_info">Thông báo</string>
    <string name="setting_sound">Âm thanh</string>
    <string name="setting_language">Ngôn ngữ</string>
    <string name="title_setting_2">MEDIA</string>
    <string name="setting_Image">Trình chiếu ảnh</string>
    <string name="language_vietnam">Tiếng Việt</string>
    <string name="language_english">Tiếng Anh</string>
    <string name="older_password">Mật khẩu cũ</string>
    <string name="check_new_password">Xác nhận mật khẩu mới</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="change_pass">Thay đổi mật khẩu của bạn</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="banvuilongnhap">Vui lòng nhập lại tên đăng nhập hoặc Email đăng nhập. Chúng tôi sẽ gửi mật khẩu mới cho bạn.</string>
    <string name="email_username">Email/ Tên Đăng Nhập</string>
    <string name="title_forget_pass">Quên Mật Khẩu Đăng Nhập</string>
    <string name="hint_upload_photo_take">Máy Ảnh</string>
    <string name="hint_upload_photo_pick">Thư Viện</string>
    <string name="hint_sdcard_not_mounted">Bộ nhớ máy không đủ !</string>
    <string name="from">Từ</string>
    <string name="add_education">Thêm Mới Học Vấn</string>
    <string name="to">Đến</string>
    <string name="to_now">Tới Nay</string>
    <string name="where">Tại</string>
    <string name="value">Kết Quả</string>
    <string name="more_info">Thông Tin Thêm</string>
    <string name="upfile">Tải lên bằng cấp, chứng chỉ</string>
    <string name="vitri">Vị Trí</string>
    <string name="add_exp">Thêm Mới Kinh Nghiệm</string>
    <string name="show_detail">Chi Tiết</string>
    <string name="hideDetail">Rút Gọn</string>
    <string name="mongmuon">MONG MUỐN</string>
    <string name="muctieunghenghiep">MỤC TIÊU NGHỀ NGHIỆP</string>
    <string name="su_nghiep">SỰ NGHIỆP</string>
    <string name="noilamviec">Nơi Làm Việc :</string>
    <string name="thunhap">Thu Nhập :</string>
    <string name="nhap_dia_chi">Nhập Địa Chỉ</string>
    <string name="tong_thu_nhap">Tổng Thu Nhập</string>
    <string name="phu_cap">Phụ cấp</string>
    <string name="thuong_trach_nhiem">Thưởng / Trách Nhiệm</string>
    <string name="luong_co_ban">Lương Cơ Bản</string>
    <string name="thunhapVND">Thu Nhập (VND)</string>
    <string name="add_desired_job">Thêm Mới Công Việc Mong Muốn</string>
    <string name="loading">Loading...</string>
    <string name="error_login">Đăng nhập thất bại, vui lòng thử lại !</string>
    <string name="error_retry_password">Mật khẩu không trùng nhau</string>
    <string name="Menh">Mệnh</string>
    <string name="sex">Giới Tính</string>
    <string name="gioitinh">- Giới Tính</string>
    <string name="places_birth">Nơi Sinh</string>
    <string name="noicutru">Hiện Ở Tại</string>
    <string name="mangxahoi">Mạng Xã Hội</string>
    <string name="ngoaihinh">Ngoại Hình</string>
    <string name="chieucao">Chiều Cao</string>
    <string name="cannang">Cân Nặng</string>
    <string name="sodo3vong">Số Đo 3 Vòng</string>
    <string name="sothich">Sở Thích</string>
    <string name="noiduocgiong">Nói Được Giọng</string>
    <string name="hatduocgiong">Hát Được Giọng</string>
    <string name="skills">Kĩ Năng</string>
    <string name="khanangdacbiet">Khả Năng Đặc Biệt</string>
    <string name="loading_app">Loading App</string>
    <string name="quocgia">Quốc Gia</string>
    <string name="LinhVuc">Lĩnh Vực</string>
    <string name="ThoiGianLamViec">Thời Gian Làm Việc</string>
    <string name="DiaChi">Địa Chỉ</string>
    <string name="Website">Website</string>
    <string name="GioiThieu">Giới Thiệu</string>
    <string name="Logo">Logo</string>
    <string name="TrangPhuc">Trang Phục</string>
    <string name="PhucLoi">Phúc Lợi</string>
    <string name="NoiQuy">Nội Quy - Quy Chế</string>
    <string name="PhapNhan">Pháp Nhân</string>
    <string name="MaSoThue">Mã Số Thuế</string>
    <string name="ThongTinLienHe">Thông Tin Liên Hệ</string>
    <string name="Status">Trạng Thái</string>
    <string name="Ho">Họ</string>
    <string name="Dem">Đệm</string>
    <string name="Ten">Tên</string>
    <string name="remale">Nữ</string>
    <string name="male">Nam</string>
    <string name="other">Khác</string>
    <string name="dep">Đẹp</string>
    <string name="ua_nhin">Ưa Nhìn</string>
    <string name="normal">Bình Thường</string>
    <string name="met">Mét</string>
    <string name="kg">Kilogram</string>
    <string name="cm">Centimet</string>
    <string name="tailen">Tải lên</string>
    <string name="save">Lưu</string>
    <string name="TenCongTy">Tên Công Ty</string>
    <string name="NguoiDaiDien">Người Đại Diện</string>
    <string name="ChucVu">Chức Vụ</string>
    <string name="add_new">Thêm mới</string>
    <string name="album_name">Tên Album</string>
    <string name="add_new_album">Tạo Album Mới</string>
    <string name="gioi">Xếp loại giỏi</string>
    <string name="trungbinh">Xếp loại trung bình</string>
    <string name="kha">Xếp loại khá</string>
    <string name="xeploai">Xếp Loại</string>
    <string name="quatrinhlamviec">QUÁ TRÌNH LÀM VIỆC</string>
    <string name="kinh_nghiem">KINH NGHIỆM</string>
    <string name="quanlytintuyendung">Quản Lý Tin Tuyển Dụng</string>
    <string name="nhansu">Nhân Sự</string>
    <string name="ungvienquantam">Ứng Viên Quan Tâm</string>
    <string name="nhap">NHÁP</string>
    <string name="daxoa">ĐÃ XÓA</string>
    <string name="hethan">HẾT HẠN</string>
    <string name="dakhoa">ĐÃ KHÓA</string>
    <string name="dadang">ĐÃ ĐĂNG</string>
    <string name="thongtinbatbuoc">Thông Tin Bắt Buộc</string>
    <string name="che_do_xem">Chế độ xem</string>
    <string name="che_do_ung_tuyen">Chế độ ứng tuyển</string>
    <string name="thongtintuyendung">THÔNG TIN TUYỂN DỤNG</string>
    <string name="tieu_de_tin">Tiêu Đề Tin</string>
    <string name="loidan">Lời Dẫn</string>
    <string name="dangchon">Đang Chọn</string>
    <string name="soluongcantuyen">Số Lượng Cần Tuyển</string>
    <string name="city">Tỉnh/TP</string>
    <string name="town">Quận/Huyện</string>
    <string name="street">Đường/Phố</string>
    <string name="number">Số</string>
    <string name="motacongviec">Mô Tả Công Việc</string>
    <string name="tuoitac">- Tuổi Tác</string>
    <string name="up">Trên</string>
    <string name="between">Trong Khoảng</string>
    <string name="down">Dưới</string>
    <string name="exactly">Chính Xác</string>
    <string name="nhapdotuoi">Nhập độ tuổi</string>
    <string name="ngoai_hinh">- Ngoại Hình</string>
    <string name="kinhnghiem">- Kinh Nghiệm</string>
    <string name="themtieuchiyeucau">Thêm Tiêu Chí Yêu Cầu</string>
    <string name="loaitru">Loại Trừ</string>
    <string name="noi_sinh">- Nơi Sinh</string>
    <string name="hien_tru_tai">- Hiện Trú Tại</string>
    <string name="suc_khoe">- Sức Khỏe</string>
    <string name="chieu_cao">- Chiều Cao(Mét)</string>
    <string name="themtieuchiloaitru">Thêm Tiêu Chí Loại Trừ</string>
    <string name="quyenloiduochuong">Quyền Lợi Được Hưởng</string>
    <string name="luongcoban">- Lương Cơ Bản(VNĐ)</string>
    <string name="nhapmucluong">Nhập Mức Lương</string>
    <string name="thuongVND">- Thưởng(VNĐ)</string>
    <string name="nhapmucthuong">Nhập Mức Thưởng</string>
    <string name="nhapphucap">Nhập Phụ Cấp</string>
    <string name="phuc_loi">- Phúc Lợi</string>
    <string name="thoigianungtuyen">Thời Hạn Ứng Tuyển</string>
    <string name="ngonnguhoso">Ngôn Ngữ Hồ Sơ</string>
    <string name="hinhanhcongviec">Hình Ảnh Công Việc</string>
    <string name="duthaohopdong">Dự Thảo Hợp Đồng Lao Động</string>
    <string name="dang_tin">Đăng Tin</string>
    <string name="xem_truoc">Xem Trước</string>
    <string name="luu_tin_nhap">Lưu Tin Nháp</string>
    <string name="huy_tao_tin">Hủy Tạo Tin</string>
    <string name="congkhai">Công Khai</string>
    <string name="canhan">Cá Nhân</string>
    <string name="nhapchieucao">Nhập Chiều Cao</string>
    <string name="fulltime">Toàn Thời Gian</string>
    <string name="parttime">Bán Thời Gian</string>
    <string name="xau">Xấu</string>
    <string name="mot_nam">1 Năm</string>
    <string name="mot_nam_ruoi">1 Năm 6 Tháng</string>
    <string name="hai_nam">2 Năm</string>
    <string name="hai_nam_ruoi">2 Năm 6 Tháng</string>
    <string name="ba_nam">3 Năm</string>
    <string name="ba_nam_ruoi">3 Năm 6 Tháng</string>
    <string name="bon_nam">4 Năm</string>
    <string name="bon_nam_ruoi">4 Năm 6 Tháng</string>
    <string name="nam_nam">5 Năm</string>
    <string name="hon_nam_nam"><![CDATA[> 5 Năm]]></string>
    <string name="suc_khoe_tot">Tốt</string>
    <string name="suc_khoe_trung_binh">Trung Bình</string>
    <string name="ThongTin_Lien_He">THÔNG TIN LIÊN HỆ</string>
    <string name="nguoilienhe">Người Liên Hệ</string>
    <string name="TenNguoiLienHe">Nhập Tên Người Liên Hệ</string>
    <string name="sdtNguoiLienHe">Nhập SDT Người Liên Hệ</string>
    <string name="emailNguoiLienHe">Nhập Email Người Liên Hệ</string>
    <string name="Yes">Đồng ý</string>
    <string name="sualancuoi">Sửa Lần Cuối :</string>
    <string name="so_khop">SO KHỚP</string>
    <string name="quantam">QUAN TÂM</string>
    <string name="daungtuyen">ĐÃ ỨNG TUYỂN</string>
    <string name="xac_nhan">Xác Nhận</string>
    <string name="tuchoi">Từ Chối</string>
    <string name="dalambaitest">Đã Làm Bài Test</string>
    <string name="daphongvan">Đã Phỏng Vấn</string>
    <string name="dagapmat">Đã Gặp Mặt</string>
    <string name="spam">Spam</string>
    <string name="thongbao">Thông Báo</string>
    <string name="bancothedangkitrenweb">Bạn có thể đăng kí tài khoản dành cho\nTổ Chức trên website\nwww.sokhop.vn</string>
    <string name="ok">Đồng Ý</string>
</resources>