<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:weightSum="100"
        android:orientation="horizontal"
        android:id="@+id/layout"
        android:background="#ffffff">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:id="@+id/btnTabQuanLy1"
            android:text="@string/nhap"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_10sdp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:id="@+id/btnTabQuanLy2"
            android:text="@string/dadang"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_10sdp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:id="@+id/btnTabQuanLy3"
            android:text="@string/dakhoa"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_10sdp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:id="@+id/btnTabQuanLy4"
            android:text="@string/hethan"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_10sdp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:id="@+id/btnTabQuanLy5"
            android:text="@string/daxoa"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_10sdp"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/content_frame_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:layout_below="@+id/layout"/>
    <ImageView
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/btnAdd"
        android:src="@drawable/button_addnew"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"/>
</RelativeLayout>