<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:weightSum="100"
        android:orientation="horizontal"
        android:id="@+id/layout"
        android:background="#ffffff">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:id="@+id/btnTabQuanLy1"
            android:text="@string/daungtuyen"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_8sdp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:id="@+id/btnTabQuanLy2"
            android:text="@string/dalambaitest"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_8sdp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:id="@+id/btnTabQuanLy3"
            android:text="@string/daphongvan"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_8sdp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:id="@+id/btnTabQuanLy4"
            android:text="@string/dagapmat"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_8sdp"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/content_frame_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:layout_below="@+id/layout"/>
</RelativeLayout>