<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/album_name"
        android:textSize="@dimen/_13sdp"
        android:textColor="#3A494C"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/txtMess"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/xac_nhan"
            android:id="@+id/btnOk"
            android:background="#ffffff"
            android:textColor="#3A494C"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/tuchoi"
            android:id="@+id/btnCancel"
            android:background="#ffffff"
            android:textColor="#3A494C"/>
    </LinearLayout>
</LinearLayout>
