<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.3"
            android:id="@+id/btnTabInfo1"
            android:text="@string/thongbao"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_10sdp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.3"
            android:id="@+id/btnTabInfo2"
            android:text="@string/quantam"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_10sdp"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.3"
            android:id="@+id/btnTabInfo3"
            android:text="@string/spam"
            android:background="@drawable/btn_recruitment"
            android:textColor="#3A494C"
            android:textSize="@dimen/_10sdp"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/content_frame_tab"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"/>

</LinearLayout>