<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="TITLE"
        android:textColor="#000"
        android:textSize="@dimen/_13sdp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280sdp"
        android:weightSum="100"
        android:paddingLeft="@dimen/_40sdp"
        android:paddingRight="@dimen/_40sdp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="100"
                android:text="@string/vitri"
                android:textColor="#3A494C"
                android:gravity="center_vertical"
                android:textSize="@dimen/_15sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            >
            <Spinner
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="100"
                android:id="@+id/spVitri"
                android:background="#ffffff"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="100"
                android:text="@string/noilamviec"
                android:textColor="#3A494C"
                android:gravity="center_vertical"
                android:textSize="@dimen/_15sdp"/>
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="#3A494C"
            android:hint="@string/nhap_dia_chi"
            android:textColorHint="@android:color/darker_gray"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"
            android:hint="@string/nhap_dia_chi"
            android:textColorHint="@android:color/darker_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/thunhapVND"
            android:textSize="@dimen/_15sdp"
            android:textColor="#3A494C"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/luong_co_ban"
            android:textSize="@dimen/_10sdp"
            android:textColor="#3A494C"
            android:layout_marginLeft="@dimen/_20sdp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="#3A494C"
            android:id="@+id/edtWhere"
            android:layout_marginLeft="@dimen/_20sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/thuong_trach_nhiem"
            android:textSize="@dimen/_10sdp"
            android:textColor="#3A494C"
            android:layout_marginLeft="@dimen/_20sdp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="#3A494C"
            android:id="@+id/edtValues"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@drawable/custom_edittext"
            android:paddingLeft="@dimen/_5sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/phu_cap"
            android:textSize="@dimen/_10sdp"
            android:textColor="#3A494C"
            android:layout_marginLeft="@dimen/_20sdp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="#3A494C"
            android:id="@+id/edtMoreInfo"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@drawable/custom_edittext"
            android:paddingLeft="@dimen/_5sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:text="@string/tong_thu_nhap"
            android:textSize="@dimen/_10sdp"
            android:textColor="#3A494C"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="#3A494C"
            android:id="@+id/edtTotalValue"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@drawable/custom_edittext"
            android:paddingLeft="@dimen/_5sdp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="Hủy"
            android:id="@+id/btnCancel"
            android:background="#ffffff"
            android:textColor="#3A494C"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="Thêm Mới"
            android:id="@+id/btnSave"
            android:background="#ffffff"
            android:textColor="#3A494C"/>
    </LinearLayout>
</LinearLayout>
