<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingLeft="@dimen/_10sdp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:text="@string/thunhap"
        android:textColor="#3A494C"
        android:gravity="center_vertical"
        android:textSize="@dimen/_11sdp"
        android:id="@+id/txtJobs"
        android:singleLine="true"
        android:layout_marginTop="@dimen/_2sdp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15sdp"
        android:text="@string/thunhap"
        android:textColor="#666666"
        android:gravity="center_vertical"
        android:textSize="@dimen/_10sdp"
        android:id="@+id/txtPlaces"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15sdp"
        android:text="@string/thunhap"
        android:textColor="#666666"
        android:gravity="center_vertical"
        android:textSize="@dimen/_10sdp"
        android:id="@+id/txtTypeWork"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_15sdp"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_2sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_15sdp"
            android:text="@string/sualancuoi"
            android:textColor="#666666"
            android:gravity="center_vertical"
            android:textSize="@dimen/_10sdp"
            android:layout_alignParentLeft="true"
            android:id="@+id/txtsualancuoi"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_15sdp"
            android:text="@string/up"
            android:textColor="@color/toolbar"
            android:gravity="center_vertical"
            android:textSize="@dimen/_10sdp"
            android:paddingLeft="@dimen/_3sdp"
            android:layout_toRightOf="@+id/txtsualancuoi"
            android:id="@+id/txtTimeLastEdit"/>
    </RelativeLayout>
</LinearLayout>