<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:background="#ffffff">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:id="@+id/imgClose"
            android:src="@drawable/ic_close_2"
            android:layout_margin="@dimen/_10sdp"
            android:layout_gravity="right"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="45"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:id="@+id/imgImage"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pc"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/dangki"
            android:textSize="@dimen/_17sdp"
            android:textColor="@color/recruitment2"
            android:gravity="center_vertical|center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:text="@string/bancothedangkitrenweb"
            android:textSize="@dimen/_12sdp"
            android:textColor="#ACACAC"
            android:gravity="center_vertical|center_horizontal"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:background="@color/recruitment2"
            android:text="@string/ok"
            android:textColor="#ffffff"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:id="@+id/img_ok"
            />
    </LinearLayout>
</RelativeLayout>